manifest_caas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modal-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modal-analysis
  template:
    metadata:
      labels:
        app: modal-analysis
    spec:
      containers:
        - name: main-container
          image: registry.ford.com/gesautaiml/modal-analysis:modal-analysis-image # Replace with your back-end image path
          imagePullPolicy: Always
          command: ["uv", "run", "python", "-m", "backend.app"]
          resources:
            requests:
              memory: "2G" # Reduced memory request
              cpu: "1" # Reduced CPU request
            limits:
              memory: "2G" # Reduced memory limit
              cpu: "1" # Reduced CPU limit
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: modal-analysis-service
spec:
  selector:
    app: modal-analysis
  ports:
  - name: http
    port: 5000
    targetPort: 5000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modal-analysis
  name: modal-analysis-route
  annotations:
    haproxy.router.openshift.io/timeout: "300s"
spec:
  host: modal-analysis.apps.pp101.caas.gcp.ford.com # The domain for the back-end
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: modal-analysis-service
    weight: 100
  wildcardPolicy: None
